<resources>
    <string name="app_name">LCountdown</string>
    <string name="title_activity_widget_list">Widget list</string>
    <string name="deleted">deleted</string>
    <string name="undo">undo</string>
    <string name="alert">Note</string>
    <string name="msg_alert_dream">This application supports screen saver. The first countdown in the list will be displayed in the screen saver, and you can drag and drop to reorder. At the same time, you can display notification information in the screen saver, but you need relevant permissions.</string>
    <string name="goto_open">to open</string>
    <string name="no_time">does not show time</string>
    <string name="no_countdown">Not counting down</string>
    <string name="aims_name">target name</string>
    <string name="sign">signature</string>
    <string name="end_time">target time</string>
    <string name="prefix">prefix</string>
    <string name="left_until">difference</string>
    <string name="suffix">suffix</string>
    <string name="the_end">still</string>
    <string name="day_unit">Day</string>
    <string name="day_unit2">st</string>
    <string name="day">Day</string>
    <string name="hint_timing">The time has started. You can choose to set the name of this time</string>
    <string name="timing_name">Timing name</string>
    <string name="timing">Timing</string>
    <string name="countdown">Countdown</string>
    <string name="title_activity_timing_list">Timer</string>
    <string name="now">Now</string>
    <string name="stop_timing">Stop timing</string>
    <string name="quick_timing">Quick timing</string>
    <string name="prefix_font_size">Prefix font size %1$d SP</string>
    <string name="name_font_size">Name font size %1$d SP</string>
    <string name="suffix_font_size">Suffix font size %1$d SP</string>
    <string name="day_font_size">Day font size %1$d SP</string>
    <string name="day_unit_font_size">Day unit font size %1$d SP</string>
    <string name="hour_font_size">Hour font size %1$d SP</string>
    <string name="hour_unit_font_size">Hour unit font size %1$d SP</string>
    <string name="time_font_size">Time font size %1$d SP</string>
    <string name="sign_font_size">Sign font size %1$d SP</string>
    <string name="got_it">Got it</string>
    <string name="do_not_show_again">Not show again</string>
    <string name="floating_notif_title">LCountdown</string>
    <string name="floating_notif_msg">Countdown suspended windows are at your service</string>
    <string name="title_base_fragment">Base</string>
    <string name="title_info_fragment">Info</string>
    <string name="title_size_fragment">Font</string>
    <string name="title_loca_fragment">Location</string>
    <string name="title_crash">:( Sorry</string>
    <string name="crash_alert">I am very sorry that an irreparable error has occurred. \nYou can choose to click the bottom right corner to send an error log to the developer. Help him fix this problem.</string>
    <string name="log_not_found">The crash log information is not received normally, and the latest local log is automatically retrieved. Please determine the time of the crash.</string>
    <string name="no_log">No available logs found</string>

    <string name="log_mail_title">[LCountdown] crash log </string>
    <string name="log_mail_centent">The app has crashed. The following is an overview of the crash. </string>
    <string name="mail_chooser_title">Please select the application for sending mail </string>
    <string name="no_resolve_title">Mailbox not found</string>
    <string name="no_resolve_message">The available mailbox application was not found to send the crash log</string>
    <string name="clear_log">Logs</string>
    <string name="clear_log_message"> found %1$d logs, are you sure you want to delete them all? </string>
    <string name="clear_log_enter">delete</string>
    <string name="clear_log_end">deleted</string>

    <string name="lollipop_email" translatable="false">lollipop8555@gmail.com</string>
    <string name="copy">copy</string>
    <string name="copy_completed">Copy completed</string>

    <string name="loca_mode_title">Name</string>
    <string name="loca_mode_prefix">Prefix</string>
    <string name="loca_mode_suffix">Suffix</string>
    <string name="loca_mode_days">Days</string>
    <string name="loca_mode_day_unit">Unit</string>
    <string name="loca_mode_time">Time</string>
    <string name="loca_mode_sign">Inscription</string>
    <string name="title_color_fragment">Color</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="seconds">Seconds</string>
    <string name="millisecond">Millisecond</string>

    <string name="title_copy_times">Time point copied</string>
    <string name="msg_copy_times">You can now go to the desktop to add a countdown, this time will be used automatically</string>
    <string name="understood">Understood</string>

    <string name="copy_error">Cannot copy to clipboard</string>

    <string name="found_copy_times">Found the time point in the clipboard, use it?</string>
    <string name="use">Use</string>
    <string name="use_and_clear">Use and clear</string>
    <string name="clear">Clear</string>
    <string name="title_activity_time_calculator">Time calculator</string>
    <string name="not_repeat">Not repeating</string>
    <string name="week_repeat">Repeat weekly</string>
    <string name="month_repeat">Repeat monthly</string>
    <string name="day_repeat">Repeat every day</string>

    <string-array name="week_name">
        <item>SUNDAY</item>
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SATURDAY</item>
    </string-array>

    <string name="notifi_title_no_alert">Cannot open floating window</string>
    <string name="notifi_msg_no_alert">No floating window permission, click the notification to open the permission</string>

    <string name="followers_channel_name">Floating Countdown</string>
    <string name="close_floating">Close All</string>

    <string name="add_floating_error">Failed to add floating window\nPlease check permissions</string>
    <string name="help_calculator">1.After selecting a set of times, set the corresponding offset parameters, and the results will be displayed in another set of times. \n2.You can reach any point in time by switching between the two sets of time \n3.Click the refresh button after the time distance to change the display method of the time distance \n4.Click the copy button after a certain group of time to quickly copy the time stamp </string>
    <string name="timer_empty">You don\'t have a time item yet</string>
    <string name="title_image_fragment">Image</string>
    <string name="granted_permission">Check permission</string>
    <string name="save">save</string>
    <string name="all">All</string>

    <string name="minutes_later_10">10 minutes later</string>
    <string name="minutes_later_15">15 minutes later</string>
    <string name="after_half_an_hour">After half an hour</string>
    <string name="after_one_hour">After one hour</string>
    <string name="end_today">End_today</string>
    <string name="tomorrow_at_this_time">Tomorrow at this time</string>
    <string name="ignore_permission">ignore permission</string>
</resources>
