<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/prefixNameInputGroup"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            style="@style/drakInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/prefixNameInputView"
                android:hint="@string/prefix"
                android:text="@string/left_until"
                style="@style/drakInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/suffixNameInputGroup"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            style="@style/drakInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/suffixNameInputView"
                android:hint="@string/suffix"
                android:text="@string/the_end"
                style="@style/drakInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dayUnitInputGroup"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            style="@style/drakInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dayUnitInputView"
                android:hint="@string/day_unit"
                android:text="@string/day"
                style="@style/drakInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</FrameLayout>


