<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center"
    android:id="@+id/widgetGroup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal|bottom">

            <TextView
                android:id="@+id/nameFrontView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/left_until"
                android:textSize="16sp"
                android:textColor="#333"/>

            <TextView
                android:id="@+id/nameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="#333"/>

            <TextView
                android:id="@+id/nameBehindView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/the_end"
                android:textSize="16sp"
                android:textColor="#333"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal|bottom">
            <TextView
                android:id="@+id/dayView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="34sp"
                android:textColor="#333"/>
            <TextView
                android:id="@+id/dayUnitView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/day"
                android:textSize="16sp"
                android:textColor="#333"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/hourView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="32sp"
                android:textColor="#333"/>
            <TextView
                android:id="@+id/hourUnitView"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hour"
                android:textSize="12sp"
                android:textColor="#333"/>
        </LinearLayout>

        <TextView
            android:id="@+id/timeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#333"/>
    </LinearLayout>

    <TextView
        android:id="@+id/signView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|right"
        android:layout_gravity="bottom"
        android:textSize="12sp"
        android:textColor="#333"/>

</FrameLayout>