<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="15dp">

        <FrameLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_box_outline">
            <TextView
                android:id="@+id/prefixFontSizeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/prefix_font_size"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/inputHintColor"
                android:paddingTop="3dp"/>

            <SeekBar
                android:id="@+id/prefixFontSizeBar"
                android:max="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="3dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_box_outline">
            <TextView
                android:id="@+id/nameFontSizeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/name_font_size"
                android:textColor="@color/inputHintColor"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="3dp"/>

            <SeekBar
                android:id="@+id/nameFontSizeBar"
                android:max="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="3dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_box_outline">
            <TextView
                android:id="@+id/suffixFontSizeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/suffix_font_size"
                android:textColor="@color/inputHintColor"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="3dp"/>

            <SeekBar
                android:id="@+id/suffixFontSizeBar"
                android:max="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="3dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_box_outline">
            <TextView
                android:id="@+id/dayFontSizeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/day_font_size"
                android:textColor="@color/inputHintColor"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="3dp"/>

            <SeekBar
                android:id="@+id/dayFontSizeBar"
                android:max="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="3dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_box_outline">
            <TextView
                android:id="@+id/dayUnitFontSizeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/day_unit_font_size"
                android:textColor="@color/inputHintColor"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="3dp"/>

            <SeekBar
                android:id="@+id/dayUnitFontSizeBar"
                android:max="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="3dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_box_outline">
            <TextView
                android:id="@+id/timeFontSizeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/time_font_size"
                android:textColor="@color/inputHintColor"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="3dp"/>

            <SeekBar
                android:id="@+id/timeFontSizeBar"
                android:max="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="3dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_box_outline">

            <TextView
                android:id="@+id/signFontSizeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/sign_font_size"
                android:textColor="@color/inputHintColor"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="3dp"/>

            <SeekBar
                android:id="@+id/signFontSizeBar"
                android:max="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="3dp"/>
        </FrameLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
