<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".activity.CrashActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_crash"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/mailIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_email_black_24dp"
            app:tint="@android:color/white"
            app:layout_constraintTop_toTopOf="@id/mailAddress"
            app:layout_constraintBottom_toBottomOf="@id/mailAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0px"
            android:id="@+id/mailAddress"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/mailIcon"
            android:textSize="18sp"
            android:text="@string/lollipop_email"
            android:textColor="@android:color/white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/copyAddress"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/mailAddress"
            app:layout_constraintBottom_toBottomOf="@id/mailAddress"
            android:text="@string/copy"
            style="@style/textButton"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:id="@+id/errorView"
            app:layout_constraintBottom_toTopOf="@id/alertView"
            app:layout_constraintTop_toBottomOf="@id/mailAddress"
            android:textColor="@android:color/holo_green_light"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:scrollbars="vertical"/>

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:id="@+id/alertView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/sendMailBtn"
            android:textSize="18sp"
            android:padding="14dp"
            android:textColor="@android:color/white"
            android:text="@string/crash_alert" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sendMailBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_email_black_24dp"
            app:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>